change vs output directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
+lib/
+obj/
+output/
 ej2dx
 ej2dx.dSYM/*
 *.exe
 *.dll
 *.ilk
+*.bsc
+*.exp
+*.ilk
+*.lastbuildstate
+*.pdb
+*.suo
+*.sdf
+*.opensdf
+*.ipch
+*.sln.cache
