--- a/tools/project_creator/template/platform/android/example/app/build.gradle
+++ b/tools/project_creator/template/platform/android/example/app/build.gradle
@@ -14,6 +14,9 @@ android {
             cmake {
                 cppFlags ""
             }
+            ndkBuild {
+                cFlags "-DPROJECT_NAME=example"
+            }
         }
         ndk {
             abiFilters 'armeabi' ,'armeabi-v7a'
